# Cybernetic-Planning-Experiment

./: .env.template  .gitignore  .key  .security_key  GUI_PARAMETER_CLEANUP_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION_GUIDE.md  INSTALLATION_WIZARD_README.md  LICENSE  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_RESULTS.md  PROJECT_SUMMARY.md  README.md  README_ECONOMIC_PLAN_REVIEW.md  Update_1.1_summaries.md  analyze_usa_data.py  api_keys_config.py  benchmark_performance.py  benchmark_results.json  config.json  config_nys.json  economic_plan_review_gui.py  gui.py  install_wizard.bat  install_wizard.py  install_wizard.sh  integrate_unified_simulation_gui.py  pyproject.toml  realtime_simulation_map.html  requirements.txt  requirements_compatible.txt  run_economic_review_system.py  run_gui.bat  run_gui.sh  simple_gui_test.py  simulation_map.html  test_basic_functionality.py  test_economic_review_system.py  test_economic_simulator_actual_data.py  test_economic_simulator_minimal.py  (+5 more)
data/: USA_config.json  example_simulation_plan.json  nys_sector_config.json  resource_data_20250909_114637.json  resource_data_20250909_114649.json  resource_data_20250909_114703.json  resource_data_20250909_114718.json  synchronized_resource_data_2024.json  technology_tree_test.json  usa_io_data_2022.json
design_documents/: cybernetic_planning_design.md  dynamic_simulation.md  map_creation.md  prompt for central planning.md
docs/: GPU_ACCELERATION.md  RESOURCE_FLOW_ARCHITECTURE.md  RESOURCE_FLOW_MODEL.md  SYNTHETIC_SECTOR_GENERATION.md
examples/: map_based_simulation_demo.py  (+4 more)
(+119 files in other folders)
